# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xuCXyaXgeeL2cq9qBinfxg-_p09wOYB53YSAkmxQSCIg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1w89hWedMq_CIF9djVHcpsr_MHqMnyVvP-60X8H8k8xY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1f1Z8wXZMvoTnc6OJPSzUgRzts2o4VtV70yNAa5v-vio=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xA_4vTfXziymZGjo9Zgj3PQNv_k9iNDXS6qtd5-P763E=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1_FQ9WwIWRV5s-2piH2ohS1zJa1M4_O1YrXPx5yM6ttM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1NaUBtpv-8oWQGJs7MiCIkDN0gpw_8ZOSckg2z_AOkvc=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1iX3bIbcqVh8bh1--peTZ0AVasFhemC37oUm-4Pf_Xx0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT26HNk79OrLE_CTwM7XL_9fpmAq6n3KhpXqN_E1dUaivY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2BNQA3D8Q6kazm9FYj01PXOeT-J0Pkzd-irSIwDrlBnY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2DnCViCP7oNF7eQkCOk3kcV7gyKIMsRH4xY9WMRHyakg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2MGKHSXv-5mkNfAQR-Xs6pERbUZIvw9hZFLTcjbWda6M=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2UxiwYi0l3_onvoE9I5n9EC3JKBozOZUe6xzzv_MZJY8=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT193me4vGMSszxS_1G1xTwBx-kfTPhNfEQ20p4uT4hjRQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT194OgkM6ZQVTWIjF_Tkx5ElEx7xeTo8A3IUFkrmz6ceg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1AmuAQv1CfXSQXrK5xz8bg0D4keLES7ePSxlZuCvzx2k=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1GoS_1w-P2wP521rYHLkfLRQ8sO_TdlAnzQU0R-Auw3k=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1KO13mnFZtL8jTiY-clnxxyNqI-aImW8dtuNUSvcuXYQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1NN5-1Ob3vpRiKFLitcVgtsogoJITNqTHl8gUKpFm-74=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1sAwfuaKZfUr_HoC3OWUMzc76CB9GUGGLpEy_eUhY_FA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x641llvu3q7JbsvvyL-L3nq9vVra9UDN4I9Tf1SW38f70E=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64tbya7_GrmP8unIHwmcXDaWyBHkz-zj3aoAs1GPiruHc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x11QWmeovq4CDbgmkPYx-AjZldf5wzxxORR-Il_-ypkkA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x132_FsoFvgv7Mt252gbj_oJWI_TEq6Sj5DUbqwB94GMo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x18srBbfcqrp20XD0TVkbTgCcagVvKH1LUgBRXk2R2u6c=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2KZyc3_43nte3v1D8lEcdHD_zIztUquBZt8Gmdzrw6Ik=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2oieqU11Rnpz5uYeZMGQD73r6oIf5YcojVsHX-WHaHVY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3prlgkH7yeqi3CofMioG-lJlzWFzCZmZokxLv25lK1hM=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI321Sm2viOe3A48lAAUIdyfPK8lFRCgtsSyMAHeBy5cZoI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32jN0SqmU7rqVrO0ZRcqoANBwEH3kDv_VM1JfFaG8om54=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32vSfdCJhBZdhgQXv92t8DSYk404jMSPjgyIAqwlRZExs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI32K8AUtA2RXgD94a93_QR-5aMvZR-zggwD8zgKfw4KyYA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xFCyLpjm-e3-YHeNBPg_w1jWPY9IpgQO5tI07lb_nvIs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xa4Jh4lghws9HqJI1GTWK-3KJ_MH4B-lFqSN094-gAGk=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT15wAfxRKJUGr8Etk5bZaOmssgCDuiZhB15l4vXldv6KE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT19ZqN21EofpsFCkPc-RPEEJDxo_d1XNKh6L-hxOAuejA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1BqWHPg_RdtELzc_C2c1owjI-06a8Yd2qnwY3TI0LXyo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1DaXYg8ydpDyN-fSoXVqo1ptlYdW9BTtCl-drIgAKDWM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1USB6ltb_Q4jWh_Q2M7qF4fapOWCaU4qfpooOUUC8dro=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1aBH0ndafXSHJkRKcN5qUgnUfrarXiDfobvIj4_nXBzs=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1NvDkn2vmUEQgofjTZGmIf4L5Px39cW9Sa4rYBiEjtPc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1eIJaceOLHKtplB6WPsp0hSMQ4xowe1K14cp-u4XIGO8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3QyWFsNF7qxh9AbFmcoxXdKJMefLoRZDwbFgzJapmZRs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3hkgvj6bpmHb6nD2OrOE9Qo_l55oMvUgieAiBrN0NtBY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4OSJpEI9Wshjelbb-ndX7N3TxwGfiiwTEsxgnHoJHWyg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4xLkmzhVhA0L-PDt1u0CoaRIibd_dMeplYbVHKjDFyyE=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16YZ1QXxneADKFb03mbbN0wLluVzJYx-7fhY4fUiztCuU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16FpO6VONQmxjufM_RGipjv0DpxMrKAra4oojTJOdMkdE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16W-GgodocEnqCMUAUxiQGg823r8wwypJ4a7_xsEaaU78=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16hn1ypkGkDyX5uSCi8u7fOTyCnoSDLNvvlbn7yrWAw9Q=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16vO4UHcpRygiYDyGa2CQRn47P85Dc2xit8YTz6Dkx9ko=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16dTw-J-i1FJGWsGw1ZANZoA3d5rogVnq7hwkPvh-PhMI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16tNIF5j9i83R3vSUG5xyomnClfCcgqmnJosTcNrNKhrk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16TLqLQZMRgONcBqtTESXsEE4_G6zQwcv5LfdjfMmUflA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16eLWm7e_bS-yYXNclz-agf8pwjkS1lKXUfQH1GUCTvOI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16M3vZuF_Raq3_4svN7wF0pGUiwJ7SXECNa1T2gk-HPGY=',
      'err': 0,
    }),
  ])
# ---
